media queries and min-width myth are dead gone

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				class="mx-auto"
 			>
 				<div class="relative z-10" style="max-width: 538px">
-					<h1 style="font-size: 60px" class="text-white">
+					<h1 class="text-white text-36px text-60px">
 						Turbocharge your
 						<span class="text-brand-teal">development career</span>
 					</h1>
