--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			rel="stylesheet"
 		/>
 		<title>xs-2</title>
+		<script src="https://cdn.tailwindcss.com"></script>
 	</head>
 	<body>
 		<header
@@ -24,13 +25,15 @@
 					alt="logo image goes here."
 					style="margin-right: 50px"
 				/>
-				<a href="#" class="text-white py-8 px-16 no-underline">Pricing</a>
-				<a href="#" class="text-white py-8 px-16 no-underline">Courses</a>
-				<a href="#" class="text-white py-8 px-16 no-underline">Blog</a>
-				<a href="#" class="text-white py-8 px-16 no-underline">Forum</a>
+				<nav class="hidden md:block">
+					<a href="#" class="text-white py-8 px-16 no-underline">Pricing</a>
+					<a href="#" class="text-white py-8 px-16 no-underline">Courses</a>
+					<a href="#" class="text-white py-8 px-16 no-underline">Blog</a>
+					<a href="#" class="text-white py-8 px-16 no-underline">Forum</a>
+				</nav>
 			</div>
 
-			<div class="flex items-center">
+			<div class="items-center hidden md:flex">
 				<a href="#" class="text-white py-8 px-16 no-underline">Login</a>
 				<button
 					class="bg-brand-teal text-white border-none rounded-full py-12 px-28 font-bold uppercase text-sm"
@@ -38,6 +41,20 @@
 					Sign Up
 				</button>
 			</div>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				fill="none"
+				viewBox="0 0 24 24"
+				stroke-width="1.5"
+				stroke="currentColor"
+				class="w-6 h-6 text-white md:hidden"
+			>
+				<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+				/>
+			</svg>
 		</header>
 		<section class="relative">
 			<video
@@ -46,28 +63,25 @@
 				playsinline
 				muted="muted"
 				class="w-full h-full object-cover absolute"
-				style="height: 689px; top: -77px"
+				style="height: 689px; top: -127px"
 				src="/videos/galaxy.mp4"
 			></video>
 			<!-- <img src="/img/hero.png" alt="hero image goes here" class="w-full" /> -->
-			<div
-				style="padding: 0 12px; padding-top: 100px; max-width: 1200px"
-				class="mx-auto"
-			>
+			<div style="padding: 0 12px; max-width: 1200px" class="mx-auto pt-32">
 				<div class="relative z-10" style="max-width: 538px">
-					<h1 class="text-white text-36px text-60px">
+					<h1 class="text-white text-36px sm:text-60px font-bold leading-none">
 						Turbocharge your
 						<span class="text-brand-teal">development career</span>
 					</h1>
 					<p
-						class="text-white"
-						style="max-width: 449px; font-size: 20px; margin-top: 30px"
+						class="text-white text-16px sm:text-20px"
+						style="max-width: 449px; margin-top: 30px"
 					>
 						Chris Courses provides students and professionals a college-level
 						web development education.
 					</p>
 					<button
-						class="bg-white text-brand-teal-dark border-none py-12 px-28"
+						class="bg-white text-brand-teal-dark border-none py-12 px-28 w-full md:w-auto"
 						style="margin-top: 28px; border-radius: 4px"
 					>
 						Get started
